# speaker-diarization

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
.claude/: settings.local.json
flows/test-speaker-diarization/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
tasks/speaker-diarization/: __init__.py  task.oo.yaml
